--- a/lr1.00e-03_hs32x32x32_ctx-p1/test-eval.props
+++ b/lr1.00e-03_hs32x32x32_ctx-p1/test-eval.props
@@ -74,8 +74,8 @@ ser	(V*)
 -	*)
 -	*
 levantar	(V*)
--	(A1*
 -	*
+-	(A1*
 -	*)
 -	*
 -	*
@@ -178,9 +178,9 @@ dizer	(V*)
 -	*
 
 -	*
--	(A1*)
+-	(A0*)
 ser	(V*)
--	(A2*
+-	(AM-PRD*
 -	*
 -	*
 -	*
@@ -345,8 +345,8 @@ dar	(V*)
 -	(A1*
 -	*
 -	*
--	*
 -	*)
+-	(AM-TMP*)
 -	*
 
 -	*
@@ -480,9 +480,9 @@ posicionar	(V*)
 falar	(V*)
 -	(A1*
 -	*
--	*)
 -	*
--	(A1*
+-	*
+-	*
 -	*
 -	*)
 -	*
@@ -546,8 +546,8 @@ mostrar	(V*)
 -	*
 -	*
 -	*
--	(AM-NEG*
--	*)
+-	*
+-	(AM-NEG*)
 ter	(V*)
 -	(A1*
 -	*)
@@ -560,8 +560,8 @@ ser	(V*)
 -	(A2*
 -	*)
 -	*
--	*
--	*
+-	(A2*
+-	*)
 -	*
 -	*
 -	*
@@ -571,15 +571,15 @@ ser	(V*)
 -	*
 -	*
 
--	*
 -	(A0*
 -	*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*)
--	*
--	*
--	*
--	*
 dar	(V*)
 -	(A1*
 -	*
@@ -626,7 +626,7 @@ propiciar	(V*)
 -	*
 -	*
 -	(A1*)
--	(AM-DIS*)
+-	(V*)
 -	*
 participar	(AM-MNR*
 -	*
@@ -704,8 +704,8 @@ ser	(V*)
 discutir	(V*)
 -	(AM-TMP*
 -	*
--	*
--	*
+-	*)
+-	(AM-LOC*
 -	*
 -	*)
 -	*
@@ -846,7 +846,7 @@ dizer	(V*)
 -	*
 -	*
 -	*
--	(AM-NEG*)
+-	*
 -	(A1*
 -	*)
 ser	(V*)
@@ -903,7 +903,7 @@ afirmar	(V*)
 -	*
 -	*
 pretender	(V*)
--	(A1*
+-	(A2*
 -	*
 -	*)
 -	*
@@ -953,7 +953,7 @@ adiantar	(V*)
 -	*)
 -	*
 
--	(AM-LOC*)
+-	(A2*)
 -	*
 -	*
 -	(A1*)
@@ -968,8 +968,8 @@ indiciar	(V*)
 -	*
 -	*
 -	*
--	*)
--	(AM-LOC*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -1076,12 +1076,12 @@ animar	(V*)
 -	*
 -	*)
 acontecer	(V*)
--	(AM-LOC*
+-	(A4*
+-	*
+-	*
+-	*
 -	*
 -	*)
--	*
--	*
--	*
 -	*
 -	*
 -	*
@@ -1101,12 +1101,12 @@ acontecer	(V*)
 -	(A2*
 -	*)
 -	(V*)
-ser	(C-V*)
--	(A2*
+ser	(A2*
 -	*
 -	*
 -	*
--	*
+-	*)
+-	(AM-TMP*
 -	*
 -	*
 -	*)
@@ -1116,8 +1116,8 @@ ser	(C-V*)
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
+-	(C-A1*
 -	*
 -	*)
 cair	(V*)
@@ -1127,7 +1127,7 @@ cair	(V*)
 -	*)
 -	*
 
--	(AM-MNR*
+-	(AM-TMP*
 -	*
 -	*)
 -	*
@@ -1283,11 +1283,11 @@ pedir	(V*)
 -	*
 -	*
 -	*
--	*
--	*
 -	*)
--	*
 -	(A1*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -1329,12 +1329,12 @@ estabelecer	(V*)
 -	*
 -	*)
 -	*
+-	(A1*
 -	*
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
 -	*
 
 -	*
@@ -1371,12 +1371,12 @@ estabelecer	(V*)
 -	*
 -	*
 -	*
--	(A0*)
+-	(A1*)
 -	(V*)
 -	*
 levar	(V*)
--	(A2*
--	*)
+-	(A1*)
+-	(AM-MNR*)
 -	*
 
 -	(A0*
@@ -1443,10 +1443,10 @@ explicar	(V*)
 -	*
 -	*
 -	*
--	*
--	*
 -	*)
--	(AM-TMP*
+-	(C-A1*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -1467,14 +1467,14 @@ calcular	(V*)
 -	*
 -	*)
 -	*
--	(AM-MNR*
--	*
--	*
+-	(V*)
+-	(A0*
 -	*
 -	*
 -	*
 -	*)
 -	(AM-TMP*
+-	*
 -	*
 -	*
 -	*
@@ -1539,8 +1539,8 @@ utilizar	(V*)
 -	*
 -	*
 -	*
--	*
 -	*)
+-	*
 -	*
 dizer	(V*)
 -	*
@@ -1673,14 +1673,14 @@ dizer	(V*)
 -	*
 -	*
 -	*
--	(AM-NEG*)
-participar	(V*)
--	(A1*
 -	*
+participar	(V*)
+-	(A2*
 -	*
 -	*)
+-	(A3*
 -	*
--	*
+-	*)
 -	*
 -	*
 -	*
@@ -1701,13 +1701,13 @@ participar	(V*)
 -	*
 -	*
 -	*
+-	(AM-CAU*
 -	*
 -	*
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
 -	*
 -	*
 -	*
@@ -1715,12 +1715,12 @@ participar	(V*)
 ser	(V*)
 -	(A2*)
 -	*
+-	(A2*
 -	*
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
 -	*
 -	*
 
@@ -1750,15 +1750,15 @@ ser	(V*)
 -	*
 -	*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*)
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	(A0*)
 visitar	(V*)
 -	(A1*
 -	*
@@ -1768,11 +1768,11 @@ visitar	(V*)
 -	*)
 -	*
 
+-	(AM-PRD*
+-	*
+-	*
+-	*)
 -	(A2*
--	*
--	*
--	*
--	*
 -	*
 -	*
 -	*)
@@ -1888,10 +1888,10 @@ produzir	(V*)
 -	*)
 -	*
 realizar	(V*)
--	(AM-TMP*)
--	(AM-PNC*
--	*)
+-	(A4*
 -	*
+-	*
+-	*)
 -	*
 -	*
 
@@ -1900,13 +1900,13 @@ assistir	(V*)
 -	(A1*
 -	*
 -	*
+-	*
+-	*)
+-	(AM-ADV*
+-	*
+-	*
 -	*)
 -	(A0*
--	*
--	*
--	*
--	*
--	*
 -	*
 -	*
 -	*
@@ -1934,8 +1934,8 @@ assistir	(V*)
 -	*
 -	(A1*)
 ver	(V*)
+-	(AM-TMP*)
 -	(A2*
--	*
 -	*
 -	*
 -	*
@@ -1988,8 +1988,8 @@ nascer	(V*)
 -	*
 -	*
 -	*
--	*
--	*
+-	(A0*)
+-	(AM-TMP*)
 fazer	(V*)
 -	(AM-LOC*)
 -	*
@@ -2057,6 +2057,12 @@ anunciar	(V*)
 abrir	(V*)
 -	(A2*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*)
 -	*
 -	*
@@ -2072,6 +2078,7 @@ abrir	(V*)
 -	*
 -	*
 -	*
+-	(A2*
 -	*
 -	*
 -	*
@@ -2079,14 +2086,7 @@ abrir	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
+-	*)
 -	*
 
 -	*
@@ -2107,31 +2107,31 @@ abrir	(V*)
 -	(A0*
 -	*)
 mudar	(V*)
--	(A2*
+-	(A3*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*)
--	(AM-PNC*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*)
--	*
--	*
--	*
 -	*
 
 -	*
@@ -2185,13 +2185,13 @@ proibir	(V*)
 -	*
 -	*)
 pedir	(V*)
+-	(A4*
+-	*
+-	*
+-	*
+-	*
+-	*)
 -	(AM-PNC*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*
 -	*
 -	*
@@ -2311,7 +2311,7 @@ preparar	(V*)
 -	*
 -	*
 -	*
--	(A0*)
+-	*
 -	*
 -	*
 acompanhar	(V*)
@@ -2421,8 +2421,8 @@ promover	(V*)
 -	*
 
 -	(A0*)
--	(AM-DIS*
--	*)
+-	(AM-DIS*)
+-	(AM-NEG*)
 haver	(V*)
 -	(A1*)
 -	(C-A1*
@@ -2456,11 +2456,11 @@ haver	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
 -	(A1*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*)
 ser	(V*)
@@ -2530,7 +2530,7 @@ declarar	(V*)
 -	*
 -	*)
 ser	(V*)
--	(AM-DIS*)
+-	(A2*)
 -	*
 -	*
 -	*
@@ -2637,9 +2637,9 @@ devolver	(V*)
 construir	(V*)
 -	(A1*
 -	*)
--	(C-A1*
--	*)
 -	(A2*
+-	*
+-	*
 -	*
 -	*
 -	*)
@@ -2697,7 +2697,7 @@ ser	(V*)
 -	*
 -	*
 -	*
--	(A0*
+-	(A1*
 -	*)
 planejar	(V*)
 -	*
@@ -2884,7 +2884,7 @@ estar	(V*)
 ser	(V*)
 -	(A2*)
 -	*
--	(AM-ADV*
+-	(AM-CAU*
 -	*
 -	*
 -	*
@@ -3007,8 +3007,8 @@ negociar	(V*)
 -	*
 -	*
 -	*
--	*
 -	*)
+-	*
 -	*
 -	*
 -	(C-A2*
@@ -3124,7 +3124,7 @@ temer	(V*)
 -	*)
 -	*
 
--	*
+-	(A0*)
 -	*
 -	*
 -	*
@@ -3169,9 +3169,9 @@ pôr	(V*)
 -	(A2*
 -	*
 -	*
+-	*
 -	*)
 -	(A1*
--	*
 -	*
 -	*
 -	*
@@ -3238,15 +3238,15 @@ usar	(V*)
 
 -	(A0*)
 funcionar	(V*)
--	(A1*
+-	(A2*
 -	*
 -	*)
 -	*
 
--	(A0*
--	*)
+-	*
+-	(A0*)
 bater	(V*)
--	(AM-LOC*
+-	(AM-TMP*
 -	*)
 -	*
 -	*
@@ -3269,15 +3269,15 @@ bater	(V*)
 vir	(V*)
 -	(A1*)
 -	*
--	*
--	*
+-	(AM-MNR*
+-	*)
 -	*
 
 -	*
 -	(A0*)
 -	*
--	*
--	*
+-	(AM-MNR*
+-	*)
 -	*
 -	(A0*
 -	*)
@@ -3335,8 +3335,8 @@ haver	(V*)
 -	*
 -	*
 -	*
--	*)
--	(A0*
+-	*
+-	*
 -	*
 -	*
 -	*)
@@ -3406,12 +3406,12 @@ ser	(V*)
 -	(A1*
 -	*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*)
--	*
--	*
--	*
--	*
--	*
 -	*
 -	*
 -	*
@@ -3475,13 +3475,13 @@ movimentar	(V*)
 -	*
 
 -	(A2*
--	*
 -	*)
 -	(A1*
 -	*
+-	*
 -	*)
 haver	(V*)
--	(A1*)
+-	(A2*)
 -	*
 -	*
 -	*
@@ -3572,10 +3572,10 @@ dizer	(V*)
 -	*
 -	*
 -	*
--	(A1*
+-	(A0*
 -	*)
 ser	(V*)
--	(A2*
+-	(A1*
 -	*)
 -	(AM-PNC*
 -	*
@@ -3671,19 +3671,19 @@ discutir	(V*)
 -	*)
 -	*
 levantar	(V*)
--	(AM-LOC*
--	*
--	*
--	*
--	*)
 -	(A0*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
 -	*
 -	*)
 -	(A2*
--	*
 -	*
 -	*
 -	*
@@ -3729,10 +3729,10 @@ negar	(C-V*)
 -	*
 -	*
 terminar	(V*)
--	(A1*
--	*
--	*)
 -	(AM-MNR*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -3768,7 +3768,7 @@ especificar	(V*)
 -	(A1*)
 -	*
 
--	*
+-	(A0*)
 -	*
 anunciar	(V*)
 -	(AM-TMP*)
@@ -3791,9 +3791,9 @@ dar	(V*)
 -	(A2*
 -	*
 -	*
+-	*
 -	*)
 -	(A1*
--	*
 -	*
 -	*
 -	*
@@ -3870,8 +3870,8 @@ impedir	(V*)
 -	*
 -	*
 -	*
--	(A0*
--	*)
+-	*
+-	*
 -	*
 achar	(V*)
 -	(A1*
@@ -4070,7 +4070,7 @@ visitar	(V*)
 -	*)
 -	*
 
--	(AM-LOC*
+-	(AM-TMP*
 -	*
 -	*)
 -	*
@@ -4102,8 +4102,8 @@ unir	(V*)
 
 -	(A1*)
 ocorrer	(V*)
--	(A1*)
 -	(AM-TMP*
+-	*
 -	*
 -	*)
 -	*
@@ -4126,7 +4126,7 @@ ocorrer	(V*)
 -	*)
 -	*
 chegar	(V*)
--	(A1*
+-	(A4*
 -	*)
 -	*
 
@@ -4134,7 +4134,7 @@ chegar	(V*)
 -	*
 -	*
 -	*
--	(A0*)
+-	(A1*)
 seguir	(V*)
 -	(A2*
 -	*
@@ -4150,15 +4150,15 @@ seguir	(V*)
 -	*
 -	*
 
--	*
--	*
--	*
--	*
 -	(A0*
+-	*
+-	*
+-	*
 -	*)
+-	(AM-PRD*
 -	*
 -	*
--	*
+-	*)
 -	*
 -	*
 -	*
@@ -4258,15 +4258,15 @@ acreditar	(V*)
 -	*)
 -	*
 
--	(A0*
+-	(A1*
 -	*)
 -	*
 aumentar	(V*)
 -	*
 -	(AM-MNR*
 -	*
--	*)
--	(A1*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -4274,9 +4274,9 @@ aumentar	(V*)
 -	*)
 -	*
 
+-	(A1*
+-	*)
 -	(A0*
--	*
--	*
 -	*
 -	*
 -	*
@@ -4288,7 +4288,7 @@ aumentar	(V*)
 cair	(V*)
 -	(C-V*
 -	*)
--	(AM-MNR*
+-	(A3*
 -	*
 -	*
 -	*
@@ -4296,10 +4296,10 @@ cair	(V*)
 -	*)
 -	*
 
--	*
--	*
--	*
 -	(A1*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -4320,8 +4320,8 @@ restringir	(C-V*)
 
 -	(A1*)
 ficar	(V*)
--	(A2*)
--	(C-A2*
+-	(A2*
+-	*
 -	*
 -	*
 -	*
@@ -4359,15 +4359,15 @@ responder	(V*)
 -	(A1*)
 -	*
 receber	(V*)
--	(A2*
+-	(AM-MNR*
 -	*)
 
 -	(A0*)
 -	(AM-TMP*
--	*
--	*
 -	*)
 -	(A0*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -4505,10 +4505,10 @@ reagir	(V*)
 -	*
 -	(A0*
 -	*)
+-	(AM-NEG*)
 -	(V*)
--	(C-V*
-classificar	*)
--	(AM-PNC*
+classificar	(C-V*)
+-	(A2*
 -	*
 -	*
 -	*
@@ -4642,7 +4642,7 @@ dizer	(V*)
 -	*)
 -	*
 
--	(A0*)
+-	(A1*)
 -	*
 -	*
 começar	(V*)
@@ -4657,7 +4657,7 @@ ser	(V*)
 -	(A1*
 -	*)
 -	*
--	(AM-MNR*)
+-	*
 
 -	(A1*
 -	*)
@@ -4675,14 +4675,14 @@ funcionar	(V*)
 -	*
 -	*)
 ser	(V*)
--	(AM-DIS*
+-	(AM-CAU*
+-	*
+-	*
 -	*
 -	*
 -	*
 -	*)
--	(A2*
--	*
--	*
+-	(AM-LOC*
 -	*
 -	*
 -	*)
@@ -4699,9 +4699,9 @@ ser	(V*)
 -	*
 -	(A1*)
 circular	(V*)
--	(A2*
--	*
--	*
+-	(AM-TMP*
+-	*)
+-	(A1*
 -	*)
 -	*
 
@@ -4756,13 +4756,13 @@ retornar	(V*)
 -	*
 -	*
 -	*
+-	*
 -	*)
--	(AM-ADV*)
 -	*
 recuperar	(V*)
 -	(A1*
--	*
--	*
+-	*)
+-	(C-V*
 -	*
 -	*
 -	*)
@@ -4778,8 +4778,8 @@ recuperar	(V*)
 
 -	(AM-LOC*
 -	*)
--	*
--	*
+-	(AM-TMP*
+-	*)
 -	*
 -	*
 -	*
@@ -4789,10 +4789,10 @@ recuperar	(V*)
 -	*
 -	*)
 visitar	(V*)
--	(A1*
--	*)
+-	(A1*)
+-	(A3*
 -	*
--	(A1*
+-	*
 -	*
 -	*
 -	*
@@ -4844,7 +4844,7 @@ assumir	(V*)
 -	*)
 -	*
 
--	(A0*
+-	(A1*
 -	*)
 -	(V*)
 despedir	(C-V*)
@@ -4869,19 +4869,19 @@ despedir	(C-V*)
 -	*
 -	*
 -	*
--	*
--	*
+-	(A0*
+-	*)
 -	*
 -	*
 -	(A0*)
 ceder	(V*)
 -	(A1*
+-	*
+-	*
+-	*
+-	*
 -	*)
--	(AM-MNR*
--	*
--	*
--	*
--	*
+-	(AM-LOC*
 -	*
 -	*)
 -	*
@@ -4925,9 +4925,9 @@ confortar	(C-V*)
 -	*
 -	*
 -	*
--	(A1*)
--	(AM-NEG*)
--	(V*)
+-	*
+-	*
+-	*
 -	*
 operar	(V*)
 -	(A1*
@@ -4940,7 +4940,7 @@ operar	(V*)
 -	*
 implementar	(V*)
 -	*
--	(AM-LOC*
+-	(AM-MNR*
 -	*
 -	*)
 -	*
@@ -5166,13 +5166,13 @@ manter	(AM-MNR*
 -	*
 -	*)
 piorar	(V*)
+-	(AM-TMP*)
+-	(AM-CAU*
+-	*
+-	*
+-	*)
+-	*
 -	(AM-TMP*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*
 -	*
 -	*
@@ -5188,11 +5188,11 @@ piorar	(V*)
 -	*
 -	*
 -	*
--	(A0*)
+-	(AM-TMP*)
 arranjar	(V*)
 -	(A1*
--	*
 -	*)
+-	*
 -	(AM-TMP*
 -	*
 -	*
@@ -5216,13 +5216,13 @@ deixar	(V*)
 -	*
 
 -	*
--	*
--	*
+-	(AM-TMP*
+-	*)
 -	(A1*
 -	*)
 -	*
-pegar	(V*
--	*)
+pegar	(A2*)
+-	(V*)
 -	(A2*
 -	*
 -	*
@@ -5397,7 +5397,7 @@ demitir	(V*)
 -	*
 -	*
 -	*
--	(AM-ADV*)
+-	(AM-TMP*)
 -	*
 conhecer	(V*)
 -	(A1*
@@ -5417,12 +5417,9 @@ conhecer	(V*)
 -	*)
 -	*
 
+-	(AM-LOC*
 -	*
--	*
--	*
--	*
--	*
--	*
+-	*)
 -	*
 -	*
 -	*
@@ -5430,9 +5427,12 @@ conhecer	(V*)
 -	(A0*
 -	*
 -	*
+-	*
+-	*
+-	*
 -	*)
 convidar	(V*)
--	(A2*
+-	(AM-PNC*
 -	*
 -	*
 -	*
@@ -5452,16 +5452,16 @@ revelar	(V*)
 -	*
 -	*
 -	*
--	*)
--	(AM-ADV*
 -	*
 -	*
 -	*
 -	*
 -	*
 -	*
--	*)
--	(A1*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -5557,7 +5557,7 @@ matar	(V*)
 -	*)
 -	*
 
--	(AM-LOC*
+-	(AM-PRD*
 -	*
 -	*
 -	*
@@ -5574,7 +5574,7 @@ viver	(V*)
 -	*
 
 -	*
--	(AM-DIS*)
+-	(A2*)
 perguntar	(V*)
 -	(A1*
 -	*
@@ -5607,7 +5607,7 @@ ser	(V*)
 -	*
 dar	(V*)
 -	(A1*)
--	(AM-MNR*
+-	(A0*
 -	*)
 -	*
 -	*
@@ -5732,8 +5732,8 @@ utilizar	(V*)
 -	*
 -	*
 -	*
--	(A0*)
--	(AM-NEG*)
+-	*
+-	*
 ter	(V*)
 -	(A1*
 -	*
@@ -5752,7 +5752,7 @@ ter	(V*)
 
 -	(AM-LOC*)
 -	*
--	(AM-DIS*)
+-	(A0*)
 -	*
 ser	(V*)
 -	(A1*
@@ -5806,9 +5806,9 @@ surpreender	(V*)
 -	*
 -	*
 -	*
--	*
--	*
 -	*)
+-	*
+-	*
 -	*
 
 -	*
@@ -5836,9 +5836,9 @@ revelar	(V*)
 -	*
 -	*
 -	*
--	*
 -	*)
 -	(AM-TMP*
+-	*
 -	*
 -	*
 -	*
