--- a/lr1.00e-03_hs32x32x32_ctx-p1/valid-eval.props
+++ b/lr1.00e-03_hs32x32x32_ctx-p1/valid-eval.props
@@ -8,9 +8,30 @@
 -	*
 -	*
 -	*
--	(A1*)
+-	*
+-	(A0*)
+disputar	(V*)
+-	(A2*
+-	*
+-	*
+-	*
+-	*)
+-	(A3*
+-	*
+-	*)
+-	*
+
+-	(AM-TMP*)
+-	*
+-	(A1*
+-	*)
 estar	(V*)
 -	(A2*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -20,8 +41,326 @@ estar	(V*)
 -	*)
 -	*
 
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	(A1*)
+-	(A0*
+-	*)
+-	*
+consagrar	(V*)
+-	*
+
+-	*
+-	*
+-	*
+-	*
+matar	(V*)
+-	(A1*
+-	*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+
+-	(AM-TMP*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+sobreviver	(V*)
+-	*
+-	(AM-TMP*
+-	*
+-	*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	(AM-LOC*)
+-	(AM-EXT*)
+-	(A0*)
+esperar	(V*)
+-	*
+
+-	(A0*)
+-	(A1*)
+lançar	(V*)
+-	(A2*)
+-	(AM-TMP*
+-	*)
+
+-	(A0*
+-	*
+-	*
+-	*
+-	*
+-	*)
+dizer	(V*)
+-	(A1*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*)
+-	(AM-PRD*
+-	*
+-	*
+-	*
+-	*)
+-	*
+
+-	(A0*
+-	*
+-	*
+-	*
+-	*
+-	*)
+-	*
+-	*
+lançar	(V*)
+-	(A1*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+
+-	(A1*
+-	*
+-	*
+-	*
+-	*
+-	*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+eleger	(V*)
+-	(AM-TMP*
+-	*)
+-	*
+
+-	(AM-TMP*
+-	*
+-	*
+-	*)
+-	*
+-	(A1*)
+-	(AM-NEG*)
+-	*
+-	*
+reeleger	(V*)
+-	(AM-TMP*
+-	*)
+-	*
+
+-	*
+esperar	(V*)
+-	(AM-TMP*
+-	*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+
+-	(A1*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*)
+-	*
+dizer	(V*)
+-	*
+
+-	(A0*)
+matar	(V*)
+-	(A1*
+-	*)
+-	(AM-LOC*
+-	*
+-	*)
+
+-	(A0*
+-	*)
+matar	(V*)
+-	(A1*
+-	*)
+-	(AM-LOC*
+-	*)
+-	(AM-TMP*)
+-	*
+-	(AM-DIS*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*)
+-	*
+
+-	(AM-NEG*)
+-	*
+apontar	(V*)
+-	(A1*
+-	*
+-	*
+-	*)
+-	(AM-ADV*
+-	*
+-	*
+-	*)
+-	(C-AM-ADV*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*)
+-	*
+
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	(A0*
+-	*)
+achar	(V*)
+-	(A1*
+-	*
+-	*
+-	*)
+-	*
+
+-	(A1*
+-	*)
+incidir	(V*)
+-	(A2*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*)
+-	*
+
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	(A1*)
+estar	(V*)
+-	(AM-MNR*)
+-	(A2*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*)
+-	*
+
 tratar	(V*)
--	(AM-DIS*)
+-	(A0*)
 -	(A1*
 -	*
 -	*
@@ -496,8 +835,8 @@ acreditar	(V*)
 -	*
 -	*
 -	*
--	(A1*
 -	*
+-	(A1*
 -	*
 -	*
 -	*)
@@ -811,8 +1150,8 @@ compor	(V*)
 -	*
 -	*
 
--	*
 -	(A1*
+-	*
 -	*
 -	*
 -	*
@@ -1206,11 +1545,11 @@ apostar	(V*)
 -	*
 -	*
 -	*
--	(AM-NEG*)
 -	*
 -	*
-depender	(A1*
 -	*
+depender	(V*)
+-	(A1*
 -	*
 -	*)
 
@@ -2108,9 +2447,9 @@ alertar	(V*)
 -	(AM-ADV*
 -	*)
 instituir	(V*)
+-	(A1*
+-	*)
 -	(AM-LOC*
--	*
--	*
 -	*
 -	*)
 -	*
@@ -2577,7 +2916,7 @@ sair	(V*)
 -	(A1*
 -	*
 -	*)
--	*
+-	(AM-TMP*)
 -	*
 -	*
 -	*
@@ -2619,8 +2958,8 @@ morar	(V*)
 -	*
 
 -	(A1*
+-	*
 -	*)
--	(AM-DIS*)
 acontecer	(V*)
 -	(AM-LOC*
 -	*
@@ -3364,10 +3703,10 @@ existir	(V*)
 -	*
 -	*
 produzir	(V*)
--	(A1*
+-	(A1*)
+-	(AM-LOC*
 -	*
 -	*)
--	(AM-LOC*)
 -	*
 
 -	*
@@ -3652,7 +3991,7 @@ mudar	(V*)
 -	*
 -	*
 -	*
--	*
+-	(AM-TMP*)
 -	*
 -	*
 -	*
@@ -3832,7 +4171,7 @@ seduzir	(V*)
 -	*
 -	*)
 -	*
--	(AM-ADV*)
+-	(AM-DIS*)
 -	*
 -	(A1*
 -	*
@@ -3901,8 +4240,8 @@ apontar	(V*)
 -	*
 -	*
 -	*
--	*)
 -	*
+-	*)
 dizer	(V*)
 -	(A0*
 -	*
@@ -4076,8 +4415,8 @@ reclamar	(V*)
 -	*
 -	*
 -	*
--	*
 -	*)
+-	*
 -	*
 -	*
 -	*
@@ -4773,7 +5112,7 @@ usar	(V*)
 -	(A1*
 -	*
 -	*)
--	(AM-PNC*
+-	(A2*
 -	*
 -	*
 -	*
@@ -4949,10 +5288,10 @@ pensar	(V*)
 -	*
 -	*
 -	*
--	*
--	*
 -	*)
 -	(AM-TMP*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -4974,8 +5313,8 @@ jogar	(V*)
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
+-	(AM-TMP*
 -	*
 -	*
 -	*
@@ -5046,7 +5385,7 @@ defender	(V*)
 -	*
 -	*
 -	*
--	*
+-	(A0*)
 -	*
 -	*
 -	*
@@ -5108,10 +5447,10 @@ encerrar	(V*)
 -	*
 -	*)
 custar	(V*)
+-	(A3*
+-	*
+-	*)
 -	(A2*
--	*
--	*
--	*
 -	*
 -	*
 -	*
@@ -5206,411 +5545,4 @@ notar	(V*)
 -	*
 -	*
 -	*)
--	*
-
--	*
--	*
--	*
--	*
--	(A0*
--	*)
-mudar	(V*)
--	(A1*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*)
--	*
-
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
-conseguir	(V*)
--	(A1*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*)
--	*
-
-vender	(V*)
--	(A1*
--	*
--	*)
--	(A2*
--	*
--	*
--	*)
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
-
--	(AM-MNR*
--	*
--	*
--	*
--	*
--	*
--	*
--	*)
--	*
-dar	(V*)
--	(A2*
--	*)
--	(A1*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*)
--	*
-
-tratar	(V*)
--	(A1*
--	*)
--	(A2*
--	*)
--	*
-
--	(AM-ADV*)
--	(A0*
--	*)
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
-ter	(V*)
--	(A1*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*)
--	*
--	(AM-DIS*
--	*
--	*)
--	*
-
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
-seguir	(V*)
--	(A2*
--	*)
--	*
-
--	(A0*
--	*)
-achar	(V*)
--	(A1*
--	*
--	*)
--	*
-
--	(A0*)
-aconselhar	(V*)
--	(A1*)
--	(A2*
--	*
--	*
--	*
--	*)
-
--	*
--	*
--	*
--	*
-partir	(V*)
--	(A2*
--	*
--	*)
-
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
-segurar	(V*)
--	(A1*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*)
--	*
-
--	*
--	*
--	*
--	*
--	*
--	*
--	*
-partir	(V*)
--	(A2*
--	*
--	*)
--	*
--	*
-
--	(A3*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*)
--	*
--	(A0*
--	*)
-dizer	(V*)
--	(A1*
--	*
--	*
--	*
--	*
--	*
--	*
--	*)
--	*
-
--	(AM-TMP*
--	*
--	*
--	*)
--	*
--	(AM-TMP*
--	*)
--	(AM-LOC*
--	*
--	*)
--	*
--	(A0*
--	*)
-fazer	(V*)
--	(A1*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*)
--	*
-
--	*
--	*
-vencer	(V*)
--	(A1*
--	*
--	*)
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
-
--	*
--	(AM-ADV*
--	*
--	*
--	*
--	*)
--	*
-chegar	(V*)
--	(A1*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*)
--	*
-
-acreditar	(V*)
--	(A1*
--	*
--	*
--	*
--	*
--	*
--	*
--	*)
--	*
--	*
--	*
--	*
--	*
-
--	*
--	*
--	*
-manter	(V*)
--	(A1*
--	*)
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*
