--- a/lr1.00e-03_hs32x32x32_ctx-p1/valid-gold.props
+++ b/lr1.00e-03_hs32x32x32_ctx-p1/valid-gold.props
@@ -8,6 +8,345 @@
 -	*
 -	*
 -	*
+-	*
+-	(A0*)
+disputar	(V*)
+-	(A2*
+-	*
+-	*
+-	*
+-	*)
+-	(A3*
+-	*
+-	*)
+-	*
+
+-	(AM-TMP*)
+-	*
+-	(A1*
+-	*)
+estar	(V*)
+-	(A2*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*)
+-	*
+
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	(A1*)
+-	(A0*
+-	*)
+-	*
+consagrar	(V*)
+-	*
+
+-	*
+-	*
+-	*
+-	*
+matar	(V*)
+-	(A1*
+-	*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+
+-	(AM-TMP*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+sobreviver	(V*)
+-	*
+-	(AM-TMP*
+-	*
+-	*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	(AM-LOC*)
+-	(AM-EXT*)
+-	(A0*)
+esperar	(V*)
+-	*
+
+-	(A0*)
+-	(A1*)
+lançar	(V*)
+-	(A2*)
+-	(AM-TMP*
+-	*)
+
+-	(A0*
+-	*
+-	*
+-	*
+-	*
+-	*)
+dizer	(V*)
+-	(A1*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*)
+-	(AM-PRD*
+-	*
+-	*
+-	*
+-	*)
+-	*
+
+-	(A0*
+-	*
+-	*
+-	*
+-	*
+-	*)
+-	*
+-	*
+lançar	(V*)
+-	(A1*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+
+-	(A1*
+-	*
+-	*
+-	*
+-	*
+-	*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+eleger	(V*)
+-	(AM-TMP*
+-	*)
+-	*
+
+-	(AM-TMP*
+-	*
+-	*
+-	*)
+-	*
+-	(A1*)
+-	(AM-NEG*)
+-	*
+-	*
+reeleger	(V*)
+-	(AM-TMP*
+-	*)
+-	*
+
+-	*
+esperar	(V*)
+-	(AM-TMP*
+-	*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+
+-	(A1*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*)
+-	*
+dizer	(V*)
+-	*
+
+-	(A0*)
+matar	(V*)
+-	(A1*
+-	*)
+-	(AM-LOC*
+-	*
+-	*)
+
+-	(A0*
+-	*)
+matar	(V*)
+-	(A1*
+-	*)
+-	(AM-LOC*
+-	*)
+-	(AM-TMP*)
+-	*
+-	(AM-DIS*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*)
+-	*
+
+-	(AM-NEG*)
+-	*
+apontar	(V*)
+-	(A1*
+-	*
+-	*
+-	*)
+-	(AM-ADV*
+-	*
+-	*
+-	*)
+-	(C-AM-ADV*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*)
+-	*
+
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	(A0*
+-	*)
+achar	(V*)
+-	(A1*
+-	*
+-	*
+-	*)
+-	*
+
+-	(A1*
+-	*)
+incidir	(V*)
+-	(A2*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*)
+-	*
+
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	(A1*)
 estar	(V*)
 -	(AM-MNR*)
@@ -5206,411 +5545,4 @@ notar	(V*)
 -	*
 -	*
 -	*)
--	*
-
--	*
--	*
--	*
--	*
--	(A0*
--	*)
-mudar	(V*)
--	(A1*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*)
--	*
-
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
-conseguir	(V*)
--	(A1*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*)
--	*
-
-vender	(V*)
--	(A1*
--	*
--	*)
--	(A2*
--	*
--	*
--	*)
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
-
--	(AM-MNR*
--	*
--	*
--	*
--	*
--	*
--	*
--	*)
--	*
-dar	(V*)
--	(A2*
--	*)
--	(A1*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*)
--	*
-
-tratar	(V*)
--	(A1*
--	*)
--	(A2*
--	*)
--	*
-
--	(AM-ADV*
--	(A0*
--	*)
--	*
--	*
--	*
--	*
--	*
--	*
--	*)
--	*
--	*
-ter	(V*)
--	(A1*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*)
--	(AM-DIS*
--	*
--	*)
--	*
-
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
-seguir	(V*)
--	(A2*
--	*)
--	*
-
--	(A0*
--	*)
-achar	(V*)
--	(A1*
--	*
--	*)
--	*
-
--	(A0*)
-aconselhar	(V*)
--	(A1*)
--	(A2*
--	*
--	*
--	*
--	*)
-
--	*
--	*
--	*
--	*
-partir	(V*)
--	(A2*
--	*
--	*)
-
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
-segurar	(V*)
--	(A1*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*)
--	*
-
--	*
--	*
--	*
--	*
--	*
--	*
--	*
-partir	(V*)
--	(A2*
--	*
--	*)
--	*
--	*
-
--	(A3*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*)
--	*
--	(A0*
--	*)
-dizer	(V*)
--	(A1*
--	*
--	*
--	*
--	*
--	*
--	*
--	*)
--	*
-
--	(AM-TMP*
--	*
--	*
--	*)
--	*
--	(AM-TMP*
--	*)
--	(AM-LOC*
--	*
--	*)
--	*
--	(A0*
--	*)
-fazer	(V*)
--	(A1*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*)
--	*
-
--	*
--	*
-vencer	(V*)
--	(A1*
--	*
--	*)
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
-
--	*
--	(AM-ADV*
--	*
--	*
--	*
--	*)
--	*
-chegar	(V*)
--	(A1*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*)
--	*
-
-acreditar	(V*)
--	(A1*
--	*
--	*
--	*
--	*
--	*
--	*
--	*)
--	*
--	*
--	*
--	*
--	*
-
--	*
--	*
--	*
-manter	(V*)
--	(A1*
--	*)
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*
