--- a/datasets/schemas/gs.yaml
+++ b/datasets/schemas/gs.yaml
@@ -3517,7 +3517,7 @@ PRED:
     viabilizar, viajar, vigiar, violar, violentar, vir, virar, visar, visitar, vislumbrar,
     visualizar, viver, voar, voltar, votar, zerar, zonear]
   type: text
-PRED_MARKER: {category: feature, type: bool}
+M_R: {category: feature, type: bool}
 P_S: {category: meta, type: int}
 S: {category: meta, type: int}
 T:
