--- a/datasets/baseline/valid_eval.props
+++ b/datasets/baseline/valid_eval.props
@@ -1353,11 +1353,11 @@ estar	(V*)
 -	*
 -	*
 -	*
+-	(A0*
+-	*)
 -	*
--	*
--	*
--	(A0*)
-salvar	(V*)
+-	(V*)
+salvar	(C-V*)
 -	*
 
 -	(A0*)
@@ -1964,11 +1964,11 @@ fazer	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
 -	(A0*)
-tratar	(V*)
+-	*
+-	*
+-	(V*)
+tratar	(C-V*)
 -	*
 -	*
 -	(A1*
@@ -1977,8 +1977,8 @@ tratar	(V*)
 -	*
 
 -	*
--	(A0*)
-falar	(V*)
+-	(V*)
+falar	(C-V*)
 -	*
 -	(A1*
 -	*)
@@ -2281,12 +2281,12 @@ negociar	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
 -	(A0*)
-encontrar	(V*)
+-	*
+-	*
+-	*
+-	(V*)
+encontrar	(C-V*)
 -	*
 -	(A1*
 -	*
@@ -2340,9 +2340,9 @@ morrer	(V*)
 -	*
 -	*
 -	*
--	*
 -	(A0*)
-ferir	(V*)
+-	(V*)
+ferir	(C-V*)
 -	*
 -	(A1*
 -	*
@@ -2465,13 +2465,13 @@ ser	(V*)
 
 -	*
 -	*
+-	(A0*
+-	*
+-	*)
 -	*
 -	*
--	*
--	*
--	*
--	(A0*)
-inflamar	(V*)
+-	(V*)
+inflamar	(C-V*)
 -	*
 
 -	*
@@ -2677,7 +2677,7 @@ definir	(V*)
 -	*
 -	*
 fazer	(V*)
--	*
+-	(C-V*)
 -	(A1*
 -	*
 -	*)
@@ -2832,9 +2832,9 @@ ter	(V*)
 -	*
 -	*
 -	*
--	*
 -	(A0*)
-ter	(V*)
+-	(V*)
+ter	(C-V*)
 -	(A1*)
 -	*
 -	*
@@ -5061,12 +5061,12 @@ ser	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
 -	(A0*)
-preocupar	(V*)
+-	*
+-	*
+-	*
+-	(V*)
+preocupar	(C-V*)
 -	*
 -	(A1*)
 -	*
@@ -5104,9 +5104,9 @@ estar	(V*)
 -	*
 -	*
 -	*
--	*
 -	(A0*)
-criar	(V*)
+-	(V*)
+criar	(C-V*)
 -	*
 -	(A1*
 -	*)
@@ -5248,17 +5248,17 @@ valorizar	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	(A0*)
-chegar	(V*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	(V*)
+chegar	(C-V*)
 -	*
 -	(A1*
 -	*)
@@ -6300,10 +6300,10 @@ passar	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	(A0*)
-realizar	(V*)
+-	(A0*
+-	*)
+-	(V*)
+realizar	(C-V*)
 -	*
 -	*
 -	(A1*)
@@ -7032,10 +7032,10 @@ ver	(V*)
 esperar	(V*)
 -	*
 
--	*
--	*
--	(A0*)
-aproximar	(V*)
+-	(A0*
+-	*)
+-	(V*)
+aproximar	(C-V*)
 -	*
 
 -	(A0*)
@@ -8523,10 +8523,10 @@ haver	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	(A0*)
-separar	(V*)
+-	(A0*
+-	*)
+-	(V*)
+separar	(C-V*)
 -	*
 
 -	*
@@ -8663,12 +8663,12 @@ ser	(V*)
 -	*
 -	*
 -	*
+-	(A0*
+-	*)
 -	*
 -	*
--	*
--	*
--	(A0*)
-adotar	(V*)
+-	(V*)
+adotar	(C-V*)
 -	(A1*
 -	*
 -	*
@@ -10622,10 +10622,10 @@ fazer	(V*)
 -	*)
 -	*
 
--	*
--	*
--	(A0*)
-encaixar	(V*)
+-	(A0*
+-	*)
+-	(V*)
+encaixar	(C-V*)
 -	*
 -	(A1*
 -	*
@@ -11588,9 +11588,9 @@ ancorar	(V*)
 -	*
 -	*
 -	*
--	*
 -	(A0*)
-tornar	(V*)
+-	(V*)
+tornar	(C-V*)
 -	*
 -	*
 -	(A1*
@@ -12033,8 +12033,8 @@ ser	(V*)
 -	*
 -	*
 -	*
--	*
-pensar	(V*)
+-	(V*)
+pensar	(C-V*)
 -	*
 -	*
 -	*
